exports[`AuthType 1`] = `
<LinearGradient
  colors={
    Array [
      "#008EFF",
      "#00C8FF",
    ]
  }
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Bariol",
            "fontSize": 50,
            "fontWeight": "bold",
            "marginBottom": 75,
            "textAlign": "center",
          }
        } />
      <View
        style={
          Object {
            "borderBottomColor": "rgba(255, 255, 255, 1)",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 20,
            "width": 280,
          }
        }>
        <TextInput
          placeholder="Wat is je e-mail adres?"
          placeholderTextColor="rgba(255, 255, 255, 1)"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "normal",
              "height": 30,
              "marginTop": 30,
            }
          } />
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "rgba(255, 255, 255, 1)",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 20,
            "width": 280,
          }
        }>
        <TextInput
          placeholder="Wat is je wachtwoord?"
          placeholderTextColor="rgba(255, 255, 255, 1)"
          secureTextEntry={true}
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "normal",
              "height": 30,
              "marginTop": 30,
            }
          } />
      </View>
      <View
        style={undefined}>
        <Button
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "borderRadius": 50,
              "borderWidth": 0,
              "width": 280,
            }
          }
          textStyle={
            Object {
              "color": "rgba(0, 122, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(255, 255, 255, 1)",
          "borderBottomWidth": 0.5,
          "borderStyle": "solid",
          "marginBottom": 50,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Bariol",
            "fontSize": 11,
            "fontWeight": "normal",
          }
        }>
        Inloggen zonder account
      </Text>
    </View>
  </View>
</LinearGradient>
`;

exports[`AuthType: <Prop:title> 1`] = `
<LinearGradient
  colors={
    Array [
      "#008EFF",
      "#00C8FF",
    ]
  }
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Bariol",
            "fontSize": 50,
            "fontWeight": "bold",
            "marginBottom": 75,
            "textAlign": "center",
          }
        }>
        A snapshot title
      </Text>
      <View
        style={
          Object {
            "borderBottomColor": "rgba(255, 255, 255, 1)",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 20,
            "width": 280,
          }
        }>
        <TextInput
          placeholder="Wat is je e-mail adres?"
          placeholderTextColor="rgba(255, 255, 255, 1)"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "normal",
              "height": 30,
              "marginTop": 30,
            }
          } />
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "rgba(255, 255, 255, 1)",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 20,
            "width": 280,
          }
        }>
        <TextInput
          placeholder="Wat is je wachtwoord?"
          placeholderTextColor="rgba(255, 255, 255, 1)"
          secureTextEntry={true}
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "normal",
              "height": 30,
              "marginTop": 30,
            }
          } />
      </View>
      <View
        style={undefined}>
        <Button
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "borderRadius": 50,
              "borderWidth": 0,
              "width": 280,
            }
          }
          textStyle={
            Object {
              "color": "rgba(0, 122, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(255, 255, 255, 1)",
          "borderBottomWidth": 0.5,
          "borderStyle": "solid",
          "marginBottom": 50,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Bariol",
            "fontSize": 11,
            "fontWeight": "normal",
          }
        }>
        Inloggen zonder account
      </Text>
    </View>
  </View>
</LinearGradient>
`;

exports[`AuthType: <Prop:title> 2`] = `
<LinearGradient
  colors={
    Array [
      "#008EFF",
      "#00C8FF",
    ]
  }
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Bariol",
            "fontSize": 50,
            "fontWeight": "bold",
            "marginBottom": 75,
            "textAlign": "center",
          }
        } />
      <View
        style={
          Object {
            "borderBottomColor": "rgba(255, 255, 255, 1)",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 20,
            "width": 280,
          }
        }>
        <TextInput
          placeholder="Wat is je e-mail adres?"
          placeholderTextColor="rgba(255, 255, 255, 1)"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "normal",
              "height": 30,
              "marginTop": 30,
            }
          } />
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "rgba(255, 255, 255, 1)",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 20,
            "width": 280,
          }
        }>
        <TextInput
          placeholder="Wat is je wachtwoord?"
          placeholderTextColor="rgba(255, 255, 255, 1)"
          secureTextEntry={true}
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "normal",
              "height": 30,
              "marginTop": 30,
            }
          } />
      </View>
      <View
        style={undefined}>
        <Button
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "borderRadius": 50,
              "borderWidth": 0,
              "width": 280,
            }
          }
          textStyle={
            Object {
              "color": "rgba(0, 122, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }>
          Bewerken
        </Button>
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(255, 255, 255, 1)",
          "borderBottomWidth": 0.5,
          "borderStyle": "solid",
          "marginBottom": 50,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Bariol",
            "fontSize": 11,
            "fontWeight": "normal",
          }
        }>
        Inloggen zonder account
      </Text>
    </View>
  </View>
</LinearGradient>
`;

exports[`AuthType: Wrapping 1`] = `
<LinearGradient
  colors={
    Array [
      "#008EFF",
      "#00C8FF",
    ]
  }
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Bariol",
            "fontSize": 50,
            "fontWeight": "bold",
            "marginBottom": 75,
            "textAlign": "center",
          }
        } />
      <View
        style={
          Object {
            "borderBottomColor": "rgba(255, 255, 255, 1)",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 20,
            "width": 280,
          }
        }>
        <TextInput
          placeholder="Wat is je e-mail adres?"
          placeholderTextColor="rgba(255, 255, 255, 1)"
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "normal",
              "height": 30,
              "marginTop": 30,
            }
          } />
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "rgba(255, 255, 255, 1)",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginBottom": 20,
            "width": 280,
          }
        }>
        <TextInput
          placeholder="Wat is je wachtwoord?"
          placeholderTextColor="rgba(255, 255, 255, 1)"
          secureTextEntry={true}
          style={
            Object {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "normal",
              "height": 30,
              "marginTop": 30,
            }
          } />
      </View>
      <View
        style={undefined}>
        <Button
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "borderRadius": 50,
              "borderWidth": 0,
              "width": 280,
            }
          }
          textStyle={
            Object {
              "color": "rgba(0, 122, 255, 1)",
              "fontFamily": "Bariol",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          } />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(255, 255, 255, 1)",
          "borderBottomWidth": 0.5,
          "borderStyle": "solid",
          "marginBottom": 50,
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(255, 255, 255, 1)",
            "fontFamily": "Bariol",
            "fontSize": 11,
            "fontWeight": "normal",
          }
        }>
        Inloggen zonder account
      </Text>
    </View>
  </View>
</LinearGradient>
`;
